- Added Logo styled background to all pages - Added Overlay to Homepage pictures - fixed alignments with new background image tiling - placed individual pictures on Home in separate <div> for ease of editing later

--- a/RB test webpage/RB About.css
+++ b/RB test webpage/RB About.css
@@ -9,18 +9,31 @@ body {
     text-align: center;
     color: white;
     margin: 0 auto;
-    width: 1000px
+}
+
+body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("Assets/Rattlebag Logo White.png") repeat top/300px;
+    opacity: 0.05; /* change this to control how faint the PNG is */
+    pointer-events: none; /* don’t block clicks */
+   z-index: -1;  /*keeps it behind everything */
 }
 
 .banner {
     color: white;
-    background-color: black;
     padding: 5px;   
 }
 
 #bar_name ul{
     background-color: rgba(0, 0, 0, 0);
     position: absolute;
+    top: 100px;
+    left: 15px;
     list-style: none;
     padding-top: 21px;
     margin-top: -64px;
@@ -54,7 +67,7 @@ main {
     background-repeat: no-repeat;
     background-size: 900px;
     border: 1px solid #b37373;
-    margin: 64px auto;
+    margin: 18px auto;
 }
 
 main h2 {
