--- a/RB test webpage/RB Home.css
+++ b/RB test webpage/RB Home.css
@@ -9,11 +9,22 @@ body {
     background-color: black;
 }
 
+body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("Assets/Rattlebag Logo White.png") repeat top/300px;
+    opacity: 0.05; /* change this to control how faint the PNG is */
+    pointer-events: none; /* don’t block clicks */
+   z-index: -1;  /*keeps it behind everything */
+}
+
 .banner {
-    background-color: black;
     padding: 5px;
     display: block;
-    width: 1000px;
     margin: 0 auto;
     margin-top: -8px;
 }
@@ -21,6 +32,8 @@ body {
 #bar_name ul {
     background-color: rgba(0, 0, 0, 0);;
     position: absolute;
+    top: 121px;
+    left: 10px;
     list-style: none;
     margin: -64px 0 -24px 5px;
     line-height: 32px;
@@ -57,15 +70,45 @@ h4 {
 }
 
 .pictures {
-    margin: 64px -35px;
+    position: relative;
+    margin: 18px -35px;
+    display: inline-block;
 }
 
-img {
+.image {
+    position: relative;
+    display: inline-block;
+}
+
+.image img{
     height: 920px;
     width: 640px;
-    display: inline-block;
     align-items: center;
     border: 1px solid #b37373;
+    display: inline-block;
+}
+
+.overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    height: 60px;
+    width: 640px;
+    opacity: 0;
+    transition: opacity .3s ease;
+    font-size: 24px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #b37373;
+}
+
+.image:hover .overlay {
+    opacity: 1;
 }
 
 a:visited{
