--- a/RB test webpage/RB Menu.css
+++ b/RB test webpage/RB Menu.css
@@ -1,5 +1,4 @@
 * {
-    background-color: black;
     color: white;
     font-family: Verdana;
 }
@@ -8,11 +7,23 @@ body {
     background-color: black;
     text-align: center;
     margin: 0 auto;
-    width: 1200px;
+    width: 1300px;
+}
+
+body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("Assets/Rattlebag Logo White.png") repeat top/300px;
+    opacity: 0.05; /* change this to control how faint the PNG is */
+    pointer-events: none; /* don’t block clicks */
+   z-index: -1;  /*keeps it behind everything */
 }
 
 .banner {
-    background-color: black;
     padding: 5px;    
 }
 
@@ -32,13 +43,15 @@ a:visited{
 
 .menu img{
     height: 900px;
-    width: 350px;
-    padding: 64px 100px 64px;
+    width: 300px;
+    padding: 18px 150px 64px;
 }
 
 #bar_name ul {
     background-color: rgba(0, 0, 0, 0);
     position: absolute;
+    top: 121px;
+    left: 15px;
     list-style: none;
     margin-top: -64px;
     margin-bottom: -24px;
